--- a/app/src/main/res/layout/smartagent_list_item.xml
+++ b/app/src/main/res/layout/smartagent_list_item.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:background="#d3d3d3"
     android:padding="10dp"
+
     android:layout_margin="10dp"
     android:layout_height="wrap_content">
 
@@ -19,10 +20,11 @@
         android:id="@+id/iddd"
         android:layout_width="wrap_content"
         android:text="id"
-        android:layout_gravity="center"
+      android:gravity="center"
+
         android:paddingLeft="10dp"
         android:textColor="#000"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     </android.support.v7.widget.CardView>
 
@@ -37,9 +39,10 @@ android:layout_marginTop="5dp"
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:text="id"
-        android:layout_gravity="center"
+android:gravity="center"
+        android:paddingLeft="10dp"
         android:textColor="#000"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
     </android.support.v7.widget.CardView>
 
 
@@ -54,9 +57,10 @@ android:layout_marginTop="5dp"
         android:id="@+id/type"
         android:layout_width="wrap_content"
         android:text="id"
-        android:layout_gravity="center"
+android:gravity="center"
+        android:paddingLeft="10dp"
         android:textColor="#000"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
     </android.support.v7.widget.CardView>
 
 
@@ -69,18 +73,20 @@ android:layout_marginTop="5dp"
         app:cardCornerRadius="0dp">
     <TextView
         android:id="@+id/cdn_path"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:text="id"
 
-        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingLeft="10dp"
         android:textColor="#000"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="5dp"
+
         app:cardBackgroundColor="#FFF"
         app:cardCornerRadius="0dp">
 
@@ -88,15 +94,12 @@ android:layout_marginTop="5dp"
         android:id="@+id/size_byte"
         android:layout_width="wrap_content"
         android:text="id"
-        android:layout_gravity="center"
+android:gravity="center"
+        android:paddingLeft="10dp"
         android:textColor="#000"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     </android.support.v7.widget.CardView>
-
-
-
-
 
 
     <ImageView
