--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+  <!--  <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+-->
+
+
+    <color name="colorAccent">#C80021</color>
+    <color name="colorPrimaryDark">#FF1637</color>
+    <color name="colorPrimary">#FF1637</color>
+
+
+
 </resources>
