--- a/app/src/main/res/layout/smartagent_list_item.xml
+++ b/app/src/main/res/layout/smartagent_list_item.xml
@@ -1,121 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="2dp"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
-    android:background="#d3d3d3"
-    android:padding="10dp"
-
-    android:layout_margin="10dp"
-    android:layout_height="wrap_content">
-
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-
-        app:cardBackgroundColor="#FFF"
-        app:cardCornerRadius="0dp">
-    <TextView
-        android:id="@+id/iddd"
-        android:layout_width="wrap_content"
-        android:text="id"
-      android:gravity="center"
-
-        android:paddingLeft="10dp"
-        android:textColor="#000"
-        android:layout_height="match_parent" />
-
-    </android.support.v7.widget.CardView>
-
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-android:layout_marginTop="5dp"
-        app:cardBackgroundColor="#FFF"
-        app:cardCornerRadius="0dp">
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:text="id"
-android:gravity="center"
-        android:paddingLeft="10dp"
-        android:textColor="#000"
-        android:layout_height="match_parent" />
-    </android.support.v7.widget.CardView>
-
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="5dp"
-        app:cardBackgroundColor="#FFF"
-        app:cardCornerRadius="0dp">
-
-    <TextView
-        android:id="@+id/type"
-        android:layout_width="wrap_content"
-        android:text="id"
-android:gravity="center"
-        android:paddingLeft="10dp"
-        android:textColor="#000"
-        android:layout_height="match_parent" />
-    </android.support.v7.widget.CardView>
-
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-
-        android:layout_marginTop="5dp"
-        app:cardBackgroundColor="#FFF"
-        app:cardCornerRadius="0dp">
-    <TextView
-        android:id="@+id/cdn_path"
-        android:layout_width="match_parent"
-        android:text="id"
-
-        android:gravity="center"
-        android:paddingLeft="10dp"
-        android:textColor="#000"
-        android:layout_height="match_parent" />
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="5dp"
-
-        app:cardBackgroundColor="#FFF"
-        app:cardCornerRadius="0dp">
-
-    <TextView
-        android:id="@+id/size_byte"
-        android:layout_width="wrap_content"
-        android:text="id"
-android:gravity="center"
-        android:paddingLeft="10dp"
-        android:textColor="#000"
-        android:layout_height="match_parent" />
-
-    </android.support.v7.widget.CardView>
+    android:padding="5dp">
 
 
     <ImageView
         android:id="@+id/imageview"
-        android:visibility="gone"
-        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
-        android:layout_height="100dp" />
+        android:layout_height="100dp"
+        android:layout_marginBottom="5dp"
 
-<VideoView
-    android:id="@+id/videoview"
-    android:layout_width="200dp"
-    android:visibility="gone"
-    android:layout_marginTop="5dp"
-    android:layout_gravity="center"
-    android:layout_height="200dp" />
+        android:visibility="gone" />
+
+    <VideoView
+        android:id="@+id/videoview"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="5dp"
+
+        android:visibility="gone" />
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        app:cardBackgroundColor="#FFF"
+        app:cardCornerRadius="20dp">
+
+        <TextView
+            android:id="@+id/iddd"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:gravity="center|start"
+
+
+            android:paddingLeft="10dp"
+            android:text="id"
+            android:textColor="#000" />
+
+    </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="5dp"
+        app:cardBackgroundColor="#FFF"
+        app:cardCornerRadius="20dp">
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center|start"
+
+            android:paddingLeft="10dp"
+            android:text="id"
+            android:textColor="#000" />
+    </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="5dp"
+        app:cardBackgroundColor="#FFF"
+        app:cardCornerRadius="20dp">
+
+        <TextView
+            android:id="@+id/type"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center|start"
+
+            android:paddingLeft="10dp"
+            android:text="id"
+            android:textColor="#000" />
+    </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+
+        android:layout_marginTop="5dp"
+        app:cardBackgroundColor="#FFF"
+        app:cardCornerRadius="20dp">
+
+        <TextView
+            android:id="@+id/cdn_path"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center|start"
+
+            android:paddingLeft="10dp"
+            android:text="id"
+            android:textColor="#000" />
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="5dp"
+
+        app:cardBackgroundColor="#FFF"
+        app:cardCornerRadius="20dp">
+
+        <TextView
+            android:id="@+id/size_byte"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center|start"
+
+            android:paddingLeft="10dp"
+            android:text="id"
+            android:textColor="#000" />
+
+    </android.support.v7.widget.CardView>
 
 
 </LinearLayout>
